// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/FilterItem Check snapshots should renders correctly when closed 1`] = `
<div
  className="consonant-left-filter"
  data-testid="filter-item"
>
  <div
    className="consonant-left-filter--inner"
  >
    <h3
      className="consonant-left-filter--name"
    >
      <img
        alt=""
        loading="lazy"
        src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Check_green_icon.svg"
        width="16"
      />
      <button
        className="consonant-left-filter--link"
        data-testid="filter-item-link"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        Topic
        <div
          className="consonant-left-filter--selected-items-qty"
          data-qty=""
        >
          
          
          
          
          
          
          
          
          
          
        </div>
      </button>
    </h3>
    <ul
      className="consonant-left-filter--items"
      data-testid="filter-group"
    >
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="we-retail:activity/hiking"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="we-retail:activity/hiking"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="we-retail:activity/hiking"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Business Continuity
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="we-retail:activity/biking"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="we-retail:activity/biking"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="we-retail:activity/biking"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Creativity and Design
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/customer-intelligence"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/customer-intelligence"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/customer-intelligence"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Customer Intelligence
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/data-management-platform"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/data-management-platform"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/data-management-platform"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Data Management Platform
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/digital-foundation"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/digital-foundation"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/digital-foundation"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Digital Foundation
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/digital-trends"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/digital-trends"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/digital-trends"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Digital Trends
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/document-management"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/document-management"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/document-management"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Document Management
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/marketing-automation"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/marketing-automation"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/marketing-automation"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Marketing Automation
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/personalization"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/personalization"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/personalization"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Personalization
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/Stock"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/Stock"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/Stock"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Stock
          </span>
        </label>
      </li>
    </ul>
    <div
      className="consonant-left-filter--footer"
    >
      <span
        className="consonant-left-filter--footer-res-qty"
      >
        0
         results
      </span>
      <button
        className="consonant-left-filter--footer-btn"
        onClick={[Function]}
        type="button"
      >
        Done
      </button>
    </div>
  </div>
</div>
`;

exports[`Consonant/FilterItem Check snapshots should renders correctly when opened 1`] = `
<div
  className="consonant-left-filter consonant-left-filter_opened"
  data-testid="filter-item"
>
  <div
    className="consonant-left-filter--inner"
  >
    <h3
      className="consonant-left-filter--name"
    >
      <img
        alt=""
        loading="lazy"
        src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Check_green_icon.svg"
        width="16"
      />
      <button
        className="consonant-left-filter--link"
        data-testid="filter-item-link"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        Topic
        <div
          className="consonant-left-filter--selected-items-qty"
          data-qty=""
        >
          
          
          
          
          
          
          
          
          
          
        </div>
      </button>
    </h3>
    <ul
      className="consonant-left-filter--items"
      data-testid="filter-group"
    >
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="we-retail:activity/hiking"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="we-retail:activity/hiking"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="we-retail:activity/hiking"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Business Continuity
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="we-retail:activity/biking"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="we-retail:activity/biking"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="we-retail:activity/biking"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Creativity and Design
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/customer-intelligence"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/customer-intelligence"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/customer-intelligence"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Customer Intelligence
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/data-management-platform"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/data-management-platform"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/data-management-platform"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Data Management Platform
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/digital-foundation"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/digital-foundation"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/digital-foundation"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Digital Foundation
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/digital-trends"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/digital-trends"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/digital-trends"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Digital Trends
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/document-management"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/document-management"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/document-management"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Document Management
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/marketing-automation"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/marketing-automation"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/marketing-automation"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Marketing Automation
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/personalization"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/personalization"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/personalization"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Personalization
          </span>
        </label>
      </li>
      <li
        className="consonant-left-filter--items-item"
        data-testid="filter-group-item"
      >
        <label
          className="consonant-left-filter--items-item-label"
          htmlFor="adobe-com-enterprise:topic/Stock"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            id="adobe-com-enterprise:topic/Stock"
            onChange={[Function]}
            tabIndex="0"
            type="checkbox"
            value="adobe-com-enterprise:topic/Stock"
          />
          <span
            className="consonant-left-filter--items-item-checkmark"
          />
          <span
            className="consonant-left-filter--items-item-name"
          >
            Stock
          </span>
        </label>
      </li>
    </ul>
    <div
      className="consonant-left-filter--footer"
    >
      <span
        className="consonant-left-filter--footer-res-qty"
      >
        0
         results
      </span>
      <button
        className="consonant-left-filter--footer-btn"
        onClick={[Function]}
        type="button"
      >
        Done
      </button>
    </div>
  </div>
</div>
`;
